[talk] - Fix Safari, use visibility instead of display

--- a/www/style.css
+++ b/www/style.css
@@ -137,7 +137,7 @@ input {
 
 .videoAvatarImg {
 	z-index: 1;
-	display: none;
+	visibility: hidden;
     position: absolute;
     top: 50%;
     left: 50%;
